# reizan-mcpfuzz

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: mcpfuzz.yml
.mcpfuzz/: rules.yaml
examples/: poisoned-tools.json
src/reizan_mcpfuzz/: __init__.py  __main__.py  cli.py  dynamic.py  manifest.py  mcp_client.py  models.py  normalize.py  report.py  rules.py  scanner.py
tests/: test_cli.py  test_dynamic.py  test_rules.py  test_scanner.py
tests/fixtures/: mcp_stdio_server.py
