[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reizan-mcpfuzz"
version = "0.1.0"
description = "Deterministic fail-closed auditor for MCP tool-description poisoning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Mellafe Zuvic" }]
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
reizan-mcpfuzz = "reizan_mcpfuzz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
